--- a/web/src/pages/users/UserProfile/UserAuthInfo/modals/RegisterTOTPModal/style.scss
+++ b/web/src/pages/users/UserProfile/UserAuthInfo/modals/RegisterTOTPModal/style.scss
@@ -2,13 +2,11 @@
   & > .content {
     padding-bottom: 2.6rem;
 
-    & > .message-box {
-      min-height: 70px;
-      margin-bottom: 2rem;
+    & > .message-box-spacer {
+      padding-bottom: 20px;
 
       @include media-breakpoint-up(lg) {
-        margin: 0 3rem 2.5rem;
-        width: calc(100% - 6rem);
+        padding: 0 30px 25px;
       }
 
       p {
